syntax = "proto3";

option go_package = "github.com/dawidd6/p2p;main";

import "peer.proto";
import "piece.proto";
import "state.proto";

service Tracker {
    rpc Announce (AnnounceRequest) returns (AnnounceReply);
}

message AnnounceRequest {
    string torrent_sha256 = 1;
    uint64 downloaded_bytes = 2;
    uint64 uploaded_bytes = 3;
    repeated Piece torrent_pieces = 4;
    State torrent_state = 5;
}

message AnnounceReply {
    repeated Peer peers = 1;
}
